2014-06-30  Jeff Law  <law@redhat.com>

	PR tree-optimization/61607
	* tree-ssa-threadedge.c (simplify_control_stmt_condition): Look
	deeper into the SSA_NAME_VALUE chain.

2014-06-30  Marek Polacek  <polacek@redhat.com>

	* convert.c (convert_to_integer): Don't instrument conversions if the
	function has no_sanitize_undefined attribute.
	* ubsan.c: Don't run the ubsan pass if the function has
	no_sanitize_undefined attribute.

2014-06-30  Jakub Jelinek  <jakub@redhat.com>

	* doc/invoke.texi (-fsanitize=bounds): Move to the table with
	-fsanitize=undefined suboptions.

2014-06-30  Alan Lawrence  <alan.lawrence@arm.com>

	* config/aarch64/aarch64-simd.md (vec_perm): Enable for bigendian.
	* config/aarch64/aarch64.c (aarch64_expand_vec_perm): Remove assert
	against bigendian and adjust indices.

2014-06-30  Gerald Pfeifer  <gerald@pfeifer.com>

	* doc/install.texi (Specific, aarch64*-*-*): Fix markup.  Reword a bit.

2014-06-30  Marcus Shawcroft  <marcus.shawcroft@arm.com>

	PR target/61633
	* config/aarch64/aarch64.md (*aarch64_ashr_sisd_or_int_<mode>3):
	Add alternative; make early clobber.  Adjust both split patterns
	to use operand 0 as the working register.

2014-06-30  Jakub Jelinek  <jakub@redhat.com>

	* ira-build.c (sort_conflict_id_map): Don't call qsort if num is 0,
	as ira_object_id_map might be NULL, or 1.

2014-06-30  Zhenqiang Chen  <zhenqiang.chen@linaro.org>

	* loop-invariant.c (get_inv_cost): Handle register class.
	(gain_for_invariant): Check the register pressure of the inv
	and its overlapped register class, other than all.

2014-06-30  Gerald Pfeifer  <gerald@pfeifer.com>

	* doc/invoke.texi (Optimize Options): Fix descriptions of
	ipa-cp-loop-hint-bonus and ipa-cp-array-index-hint-bonus.

2014-06-29  David Wohlferd <dw@LimeGreenSocks.com>

	* doc/extend.texi (Function Attributes): Update 'naked' attribute
	documentation.

2014-06-29  Tobias Grosser <tobias@grosser.es>

	PR bootstrap/61650
	* graphite-isl-ast-to-gimple.c: Add missing guards.
